--- a/index.html
+++ b/index.html
@@ -60,24 +60,24 @@
 <!-- Scripts! -->
 
 <!-- Libraries -->
-<script src="js/helpers.js"></script>
+<script src="js/helpers.js?v=1"></script>
 <script src="js/minpubsub.js"></script>
 <script src="js/Mouse.js"></script>
 <script src="js/Key.js"></script>
 
 <!-- Core Simulation Code -->
 <script src="js/Loopy.js?v=5"></script>
-<script src="js/Model.js?v=3"></script>
-<script src="js/Node.js?v=3"></script>
+<script src="js/Model.js?v=4"></script>
+<script src="js/Node.js?v=4"></script>
 <script src="js/Edge.js?v=2"></script>
 <script src="js/Label.js"></script>
 
 <!-- Tools -->
 <script src="js/PageUI.js"></script>
-<script src="js/Sidebar.js?v=2"></script>
+<script src="js/Sidebar.js?v=3"></script>
 <script src="js/Toolbar.js"></script>
 <script src="js/PlayControls.js"></script>
-<script src="js/Modal.js?v=4"></script>
+<script src="js/Modal.js?v=6"></script>
 <script src="js/Ink.js"></script>
 <script src="js/Dragger.js"></script>
 <script src="js/Eraser.js"></script>
