minor improvement for demo mode

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 <script src="js/Key.js"></script>
 
 <!-- Core Simulation Code -->
-<script src="js/Loopy.js?v=10"></script>
+<script src="js/Loopy.js?v=11"></script>
 <script src="js/Model.js?v=4"></script>
 <script src="js/Node.js?v=4"></script>
 <script src="js/Edge.js?v=2"></script>
@@ -74,11 +74,11 @@
 
 <!-- Tools -->
 <script src="js/PageUI.js"></script>
-<script src="js/Sidebar.js?v=6"></script>
+<script src="js/Sidebar.js?v=7"></script>
 <script src="js/Toolbar.js"></script>
 <script src="js/PlayControls.js"></script>
 <script src="js/Modal.js?v=6"></script>
-<script src="js/Ink.js"></script>
+<script src="js/Ink.js?v=1"></script>
 <script src="js/Dragger.js"></script>
 <script src="js/Eraser.js"></script>
 <script src="js/Labeller.js"></script>
